# dot

./: .IGNORE_THIS_FILE_REUSE_LICENSE_CHEAT.txt  .cz.toml  .editorconfig  .gitignore  LICENSE  Makefile  README.md  depend-info.txt  dot.py  pyproject.toml  reuse.spdx
.reuse/: dep5
help/: dot.py-add.txt  dot.py-ignore.txt  dot.py-ignore.txt.license  dot.py-init.txt  dot.py-install.txt  dot.py-remove.txt  dot.py-sync.txt  dot.py.txt
src/dot/: __main__.py  main.py
