[tool.poetry]
name = "dot"
version = "0.1.0"
description = ""
authors = ["Jason Scheffel <contact@jasonscheffel.com>"]
packages = [{ include = "dot", from = "src" }]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dot = 'dot.__main__:main'
